@@ -1,23 +1,24 @@
-#define PACKAGE_VERSION "14.0.0"
+#define PACKAGE_VERSION "14.0.1"
 
 #cmakedefine EXTERNAL_GSM             1
 #cmakedefine HAVE_ALSA                1
+#cmakedefine HAVE_AMRNB               1
+#cmakedefine HAVE_AMRWB               1
 #cmakedefine HAVE_BYTESWAP_H          1
+#cmakedefine HAVE_FFMPEG              1
+#cmakedefine HAVE_FLAC                1
 #cmakedefine HAVE_FSEEKO              1
 #cmakedefine HAVE_GETOPT_LONG         1
 #cmakedefine HAVE_GETTIMEOFDAY        1
+#cmakedefine HAVE_ID3TAG              1
 #cmakedefine HAVE_INTTYPES_H          1
 #cmakedefine HAVE_IO_H                1
 #cmakedefine HAVE_LAME_LAME_H         1
-#cmakedefine HAVE_AMRNB               1
-#cmakedefine HAVE_AMRWB               1
 #cmakedefine HAVE_LIBAO               1
-#cmakedefine HAVE_FFMPEG              1
-#cmakedefine HAVE_FLAC                1
-#cmakedefine HAVE_OGG_VORBIS          1
 #cmakedefine HAVE_LTDL_H              1
 #cmakedefine HAVE_MACHINE_SOUNDCARD_H 1
 #cmakedefine HAVE_MAD_H               1
+#cmakedefine HAVE_OGG_VORBIS          1
 #cmakedefine HAVE_POPEN               1
 #cmakedefine HAVE_SAMPLERATE_H        1
 #cmakedefine HAVE_SNDFILE_1_0_12      1
