@@ -11,10 +11,11 @@ sox-14.0.1
 
   o Added support for non-standard, non-WAVE_FORMAT_EXTENSIBLE
     (esp. 24-bit) PCM wav.  (robs)
+  o Initial support for showing MP3 file duration with -V & -S.  (robs)
 
   Effects:
 
-  o Reimplemented reverb using freeverb.  (robs)
+  o Reimplemented reverb to be similar to freeverb.  (robs)
 
   Bug fixes:
 
